# rust-workshop

./: .gitignore
error/: Cargo.toml  README.md
error/src/: basic.rs  custom_error.rs  discovery.rs  lib.rs  maybe.rs  questionmark.rs
error/tests/: 01-simply-unwrap.rs  02-match-result.rs  03-custom-error.rs  04-error-source.rs  05-into.rs  06-what-is-anyhow.rs  07-option-convert.rs  progress.rs
